--- a/MVCBOOT-WhetherReportApplication/src/main/resources/application.properties
+++ b/MVCBOOT-WhetherReportApplication/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 spring.mvc.view.prefix=/WEB-INF/pages/
 spring.mvc.view.suffix=.jsp
 
-#server con
+#server config
 server.port=2020
 
 #api key congfiguration 
-weather.api.key =6579d64cccd55092f9b3f07e18d51d8b
+weather.api.key =get  your key
