added api key to properties file

--- a/LiveWeatherTracker/src/main/resources/application.properties
+++ b/LiveWeatherTracker/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.mvc.view.suffix=.jsp
 server.port=2020
 
 #api key congfiguration 
-weather.api.key =get  your key
+weather.api.key =350e2667e8d4ad6c68efe30e52f8b8c3
